chamber/styles/small.css
:root {
/* Color Variables taken to resemble vscode */
  --primary: #0A4C8A;
  --secondary: #F4B400;
  --background: #F7F9FC;
  --text: #1A1A1A;
  --text-light: #FAFAFA;
  --accent-hover: #fac824;
}

* {
    margin: 0;
    padding: 0;
    font-family: "Oswald", sans-serif;
}

body {
    background-color: var(--primary);
    color: var(--text-light);
}

header {
    text-align: left;
    background-color: var(--secondary);
    color: var(--text);
    font-size: 1.5rem;
    padding-top: 1rem;
}

header span {
    margin-left: 1rem;
}

header span img {
    vertical-align: middle;
    margin-right: 0.5rem;
}

main {
    text-align: center;
}

h1 {
    text-align: left;
    margin-left: 1rem;
    text-decoration: underline;  
}

h2 {
    margin-bottom: 1rem;
    color: var(--text);
    padding: 0.5rem 2rem;
    border-radius: 0.5rem;

}
section {
    padding: 1rem;
}

nav {
    background-color: var(--secondary);
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.navbar a.active {
    text-decoration: underline;
}

button {
    padding: 2rem;
    font-size: 1.5rem;
    border: none;
    border-radius: 10px;
    background: var(--secondary);
}

button:hover {
    cursor: pointer;
    background-color: var(--accent-hover);
}

#buttons {
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding: 2rem;
}

#hero {
    position: relative;
    width: 100%;
}

#hero img {
    width: 100%;
    height: auto;
}

#hero button {
    font-size: medium;
    padding: 1rem;
    position: absolute;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
}

ul {
    list-style: none;
}

ul.navbar {
    display: none;
    flex-direction: column;
    justify-content: flex-end;
    margin-top: 1rem;
}

ul.navbar.show {
    display: flex;
    background-color: #fac824;
    width: 100%;
}

ul.navbar li {
    padding: 0.5rem 0;
}

.navbar a {
    color: var(--accent-blue);
    text-decoration: none;
    padding: 0.5rem 1rem;
    border-radius: 4px;
    transition: background-color 0.2s ease;
}

.navbar a:hover {
    background-color: var(--accent-hover);
    color: #fff;
}

.level {
    padding: 2rem 0;
    font-weight: bold;
    font-size: large;
    text-align: center;
}

#menu {
    margin-left: auto;
    margin-top: 1rem;
    padding: 1rem;
}

#cards, #currentEvents {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
}

#currentEvents section {
    margin: 1rem;
    padding: 2rem;
    border-radius: 10px;
    background-color: var(--secondary);
    color: var(--text);
    text-align: center;
}

#forecast h4{
    margin-bottom: 1rem;
    text-decoration: underline;
}

#forecast div {
    padding: 1rem;
}

#spotlightTitle {
    padding: 3rem;
    color: var(--text-light);
    text-decoration: underline;
}
#spotlight {
    display: grid;
    grid-template-columns: 1fr;
    text-align: center;
}

#cards section, #spotlight section {
    text-align: left;
    margin: 1rem;
    padding: 2rem;
    border-radius: 10px;
    background-color: var(--background);
    color: var(--text);
}

#cards h2, #spotlight h2 {
    text-align: center;
    text-decoration: underline;
    margin: 1rem 0;
    color: var(--text);
}

#spotlight p, #spotlight div  {
    text-align: center;
}

#cards p, #cards a {
    margin: 1rem 0;
}

#cards a, #spotlight a {
    text-decoration: underline;
    color: var(--text);
    
}

#cards img, #spotlight img {
    display: block;
    margin: 0 auto 1rem auto;
    max-width: 80%;
    height: auto;
    padding: 1rem;
    margin-bottom: 1rem;
    border: 1px solid var(--text);
    border-radius: 10px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
}

#cards.list-view {
    display: flex;
    flex-direction: column;
    margin: 0;
    gap: 0;
}

#cards.list-view section {
    align-items: center;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    border: none;
    margin: 0;
    border-radius: 0;
    padding: 0;
    background: none;
}

#cards.list-view img {
    display: none;
}

#cards.list-view h2,
#cards.list-view p,
#cards.list-view a {
    font-size: medium;
    color: var(--text-light);
    text-decoration: none;
    padding: 2rem 1rem;
    margin: 0;
}

#cards.list-view .level {
    display: none;
}

#cards.list-view section:nth-child(odd) {
    background-color: rgba(255, 255, 255, 0.1);
}

#cards.list-view section:nth-child(even) {
    background-color: rgba(255, 255, 255, 0.2);
}

footer {
    background-color: var(--secondary);
    color: var(--text);
    padding: 1rem;
    text-align: center;
}

footer span img {
    padding: 1rem 2rem;
}

